# diceomatic

./: .gitignore  README.md  pyproject.toml
examples/: quiz_app.py  simple.py  simple2.py
src/sumchef/: __init__.py
tests/: README.md  conftest.py  test_core.py  test_solver.py
