[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diceomatic"
version = "0.1.0"
description = "A DSL for children's dice games and maths quizzes."
authors = [
    { name = "Robert Heaton", email = "robqheaton@gmail.com.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/robert/diceomatic"
Repository = "https://github.com/robert/diceomatic"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
